Traduction des boutons en français

--- a/boutons.html
+++ b/boutons.html
@@ -67,11 +67,11 @@
 <h2>Text Buttons</h2>
 <p>Text buttons with a specific background color on hover:</p>
 
-<button class="btn success">Success</button>
+<button class="btn success">Succès</button>
 <button class="btn info">Info</button>
-<button class="btn warning">Warning</button>
+<button class="btn warning">Attention</button>
 <button class="btn danger">Danger</button>
-<button class="btn default">Default</button>
+<button class="btn default">Par défaut</button>
 
 </body>
 </html>
