Ajout du Boostrap et correction de la traduction

--- a/boutons.html
+++ b/boutons.html
@@ -2,8 +2,12 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 <style>
-.btn {
+/* .btn {
   border: none;
   background-color: inherit;
   padding: 14px 28px;
@@ -59,19 +63,19 @@
 
 .default:hover {
   background: #e7e7e7;
-}
+} */
 </style>
 </head>
 <body>
 
-<h2>Text Buttons</h2>
-<p>Text buttons with a specific background color on hover:</p>
+<h2>Bouton traduits et mis en oeuvre du Bootstrap</h2>
+<p>Une couleur différente pour chaque item</p>
 
-<button class="btn success">Succès</button>
-<button class="btn info">Info</button>
-<button class="btn warning">Attention</button>
-<button class="btn danger">Danger</button>
-<button class="btn default">Par défaut</button>
+<button class="btn btn-success">Succès</button>
+<button class="btn btn-info">Info</button>
+<button class="btn btn-warning">Attention</button>
+<button class="btn btn-danger">Danger</button>
+<button class="btn btn-default">Par défaut</button>
 
 </body>
 </html>
