traduction en FR

--- a/basic-modal.html
+++ b/basic-modal.html
@@ -11,9 +11,9 @@
 <body>
 
 <div class="container">
-  <h2>Basic Modal Example</h2>
+  <h2>Basic Modal</h2>
   <!-- Trigger the modal with a button -->
-  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
+  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Une modal simple</button>
 
   <!-- Modal -->
   <div class="modal fade" id="myModal" role="dialog">
@@ -23,13 +23,13 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Modal Header</h4>
+          <h4 class="modal-title">L'entête de la Modal</h4>
         </div>
         <div class="modal-body">
-          <p>Some text in the modal.</p>
+          <p>Voici une modal sans complexe.</p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
         </div>
       </div>
       
