ajout un peu de couleur

--- a/basic-modal.html
+++ b/basic-modal.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <style>
+ 
+</style>
 </head>
 <body>
 
@@ -29,7 +32,7 @@
           <p>Voici une modal sans complexe.</p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
+          <button type="button" class="btn btn-warning" data-dismiss="modal">Fermer</button>
         </div>
       </div>
       
